Remove extra links and prevent name break in list

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,6 @@ a {
 }
 
 .hour ul, .hour li {
-  display: inline;
-  margin-right: 1.25em;
+  display: inline-block;
+  margin-right: 1em;
 }
